unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/bt_stripe__Gateway_SKU__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe. This maps to a SKU record in the Stripe API.</description>
    <label>Gateway SKU</label>
    <nameField>
        <displayFormat>SKU-{00000}</displayFormat>
        <label>Gateway SKU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway SKUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>