unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__Active__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the SKU is available for purchase.</description>
    <inlineHelpText>Whether the SKU is available for purchase.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>