unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__Inventory_Quantity__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Inventory_Quantity__c</fullName>
    <description>The count of inventory available. Required if type is finite.</description>
    <inlineHelpText>The count of inventory available. Required if type is finite.</inlineHelpText>
    <label>Inventory Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>