unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Inventory_Type__c</fullName>
    <description>Inventory type. Possible values are finite, bucket (not quantified), and infinite</description>
    <inlineHelpText>Inventory type. Possible values are finite, bucket (not quantified), and infinite</inlineHelpText>
    <label>Inventory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>infinite</fullName>
                <label>Infinite</label>
            </value>
            <value>
                <fullName>bucket</fullName>
                <label>Bucket</label>
            </value>
            <value>
                <fullName>finite</fullName>
                <label>Finite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>