unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__Price__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Price__c</fullName>
    <description>The cost of the item.</description>
    <inlineHelpText>The cost of the item.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>