unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__Product__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product this SKU is associated with. Must be a product with type good.</description>
    <inlineHelpText>The product this SKU is associated with. Must be a product with type good.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gateway SKUs</relationshipLabel>
    <relationshipName>Gateway_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>