unpackaged/main/default/objects/bt_stripe__Gateway_SKU__c/fields/bt_stripe__SKU_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__SKU_Id__c</fullName>
    <description>Unique identifier for the object.</description>
    <inlineHelpText>Unique identifier for the object.</inlineHelpText>
    <label>SKU Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>